still need to work on the bottom images

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
-        <div id="button_wrapper">
+    <div class="button_wrapper">
       <div class="individual_button_wrapper_1">
-        <i class="fa fa-comment"></i>
-        <a class="silver_button">Read Comments</a>
+        <i class="fa fa-cloud-upload"></i>
+        <a class="silver_button" href="">Read Comments</a>
       </div>
+      
       <div class="individual_button_wrapper_2">
         <i class="fa fa-cloud-upload"></i>
         <a class="silver_button" href="">Read Later</a>
